# rust-fetch

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: main.rs
src/ascii_art/: arch  debian  ubuntu
